:white_check_mark: Test: testando sync

--- a/wp-content/languages/themes/twentytwentythree-pt_BR.po
+++ b/wp-content/languages/themes/twentytwentythree-pt_BR.po
@@ -409,7 +409,7 @@ msgstr "Entre em contato"
 #: patterns/call-to-action.php:15
 msgctxt "sample content for call to action"
 msgid "Got any book recommendations?"
-msgstr "Tem alguma recomendação de livro?"
+msgstr "Ta me ouvindo?"
 
 #: patterns/call-to-action.php
 msgctxt "Pattern title"
